| Bug #3529 | mysql client: Short-form of --safe-updates (-U) doesn't work | ||
|---|---|---|---|
| Submitted: | 21 Apr 2004 15:13 | Modified: | 28 Apr 2004 15:46 |
| Reporter: | Olaf van der Spek (Basic Quality Contributor) | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 4.0.18 | OS: | Windows (Windows XP) |
| Assigned to: | Sergei Golubchik | CPU Architecture: | Any |
[21 Apr 2004 15:13]
Olaf van der Spek
[26 Apr 2004 1:16]
Sergei Golubchik
Verified. my_getopt treats short options of OPT_ARG type incorrectly
[28 Apr 2004 15:46]
Sergei Golubchik
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
fixed in 4.0.19
