bug#3529 - my_getopt doesn't process short OPT_ARG options correctly cleanup